docs/style.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Rubik Mono One", monospace;
  font-weight: 100;
  font-family: "metropolis", sans-serif ; 
}

@font-face {
font-family: metropolis;
src: url(./metropolis.light.otf);
}
html body{
 height: 100vh;
 width: 100%;
}
a{
position: relative;
display: block;
overflow: hidden;
}
a::before{
position: absolute;
content: attr(data-link-alt);
top: 100%;
opacity: 0;
transition: 1s;
}
a> span{
display: block;
transition: 1s;
}
a:hover span{
transform: translateY(-100%);
}
a:hover::before{
  top: 0;
  opacity: 1;
  color: rgba(253, 255, 255, 0.791);
}
.icon:hover{
color: rgba(253, 255, 255, 0.791);

}
.burger {
width: 40px;
height: 40px;
display: flex;
flex-direction: column;
align-items: center;
justify-content: center;
user-select: none;
cursor: pointer;
transition: 300ms;
border-radius: 10px;
}
.burger input[type="checkbox"] {
appearance: none;
transition: 300ms;
}

.burger::before,
.burger::after {
content: "";
transition: 300ms;
transform-origin: center center;
}

.burger::before {
transform: translateY(8px);
}
.burger::after {
transform: translateY(-8px);
}
.burger .line,
.burger::before,
.burger::after {
width: 25px;
height: 2.1px;
display: block;
background-color: rgb(255, 255, 255);
border-radius: 5px;
position: absolute;
}

.burger .line:checked {
width: 0;
transition-delay: 100ms;
}
.burger:has(.line:checked)::before {
animation: animation1 400ms ease-out 0s 1 both;
}
.burger:has(.line:checked)::after {
animation: animation2 400ms ease-out 0s 1 both;
}

.burger:hover {
/* background: #aeaeae; */
border-radius: 50%;
}

.burger:hover .line,
.burger:hover::before,
.burger:hover::after {
background: #e8e8e8;
}

.burger:active {
scale: 0.95;
}
#Opened-menu{

}
#The-Nav-Bar{
position: fixed;
top: 0;
z-index: 999;
width: 100%;
}

/* .custom-h1 {
font-size: 2vmin; 
border-radius: 50%; 
font-weight: bold; 
position: absolute; 
top: 1.5vmin; 
right: 3vmin; 
height: auto;
width: auto;
padding: 1vmin; 
padding-top: 0%;
padding-bottom: 0%;
text-align: center; 
color: white; 
background-color: #dc2626; 
line-height: 3vmin; 
} */
.cart-container {
  position: relative;
  width: 50px; /* Adjust size as needed */
  height: 50px; /* Adjust size as needed */
  display: flex;
  justify-content: center;
  align-items: center;
}

/* Cart icon style */
.cart-icon {
  font-size: 2em; /* Size of the cart icon */
  cursor: pointer;
}

/* Cart counter style */
.cart-counter {
  position: absolute;
  top: -3px;
  right: -5px;
  background-color: red;
  color: white;
  border-radius: 50%;
  padding: 5px 10px;
  font-size: 1em;
  font-weight: bold;
  display: flex;
  justify-content: center;
  align-items: center;
  min-width: 20px;
}

/* Optional: Add a subtle animation for when the number changes */
.cart-counter-update {
  animation: bump 0.3s ease-in-out;
}

/* Keyframes for the bump animation */
@keyframes bump {
  0% {
      transform: scale(1);
  }
  50% {
      transform: scale(1.2);
  }
  100% {
      transform: scale(1);
  }
}


@keyframes slideInFromTop {
0% {
    opacity: 0;
    transform: translateY(-100%);
}
100% {
    opacity: 1;
    transform: translateY(0);
}
}

/* Menu container with the animation applied */
#Opened-menu {
position: absolute;
top: 0; 
left: 0;
right: 0;
background-color: black;
color: white;
display: none; 
animation: slideInFromTop 0.5s ease-in-out; 
}

#Opened-menu.show {
display: block;
}

#Opened-menu ul {
padding: 5vmin;
list-style: none;
margin: 0;
}

#Opened-menu ul li {
font-size: 3vmin;
font-weight: bold;
display: flex;
gap: 2vmin;
align-items: center;
cursor: pointer;
transition: color 0.3s; 
}

#Opened-menu ul li:hover {
color: #aaa; 
}


@keyframes animation1 {
0% {
  transform: translateY(8px) rotate(0deg);
}
50% {
  transform: translateY(0px) rotate(0deg);
}
100% {
  transform: translateY(0px) rotate(45deg);
}
}
@keyframes animation2 {
0% {
  transform: translateY(-8px) rotate(0deg);
}
50% {
  transform: translateY(0px) rotate(0deg);
}
100% {
  transform: translateY(0px) rotate(-45deg);
}
}


@media (min-width:421px) and (max-width:768px) {
.logo>img {
  height: 4vmin;
}

#Cart-log {
  font-size: 4vmin;
}

#user-logo {

  font-size: 4vmin;
}


}

/*                             catgory css                           */
.cat-box:hover .uppar-text{
  transform: translateY(0);
  transition: 0.5s ease-in-out;
}

.cat-box:hover .lower-btn{
 transform: translateY(0);
 transition: 0.5s ease-in-out;
}
/*                           catgory css ends                         */

@media (min-width:100px ) and (max-width:599px) {
  .cart-counter {
    position: absolute;
    top: 9px;
    right: 5px;
    background-color: red;
    color: white;
    border-radius: 50%;
    padding: 5px 10px;
    font-size: 2vem;
    font-weight: bold;
    display: flex;
    justify-content: center;
    align-items: center;
    min-width: 20px;
  }
}

/*                  Home-Page CSS                  */
#home {
/* margin-top: 100%; */
min-height: 100vh;
width: 100%;
overflow: hidden;
position: relative;
}

canvas {
max-width: 100vw;
max-height: 100vh;
}

.Life-Section {
background-color: black;
}

/*                Home-Page CSS Ends Here

  /background: url(/Devinja-ReimagineRound1/media/download.svg);/

/*                Home-Page CSS Ends Here

@font-face {
font-family:metropolis ;
src: url(/Devinja-ReimagineRound1/font/metropolis.light\ \(1\).otf);
}

*{
font-family: metropolis;
margin: 0;
padding: 0;
box-sizing: border-box;
}


/* Add this to your CSS file or <style> section */




.card {
transition: box-shadow 0.3s ease-in-out;
}

.card.glow {
box-shadow: 0 0 60px 5px rgba(255, 0, 0, 0.672);
}

.card-category {
transition: transform 0.3s ease-in-out;
}

.card-category:hover {
transform: translateY(-20%) scale(2.3);
}


.card-category {
transition: ease 0.5s;
}

#IMG.reveal {
/* clip-path: circle(75% at 50% 50%); */
animation-name: circleamination;
animation-duration: 1s;
}

#IMG2.reveal {
/* clip-path: circle(75% at 50% 50%); */
animation-name: circleamination;
animation-duration: 0.9s;
}

@keyframes circleamination {
0% {
  clip-path: circle(0% at 50% 50%);
}

100% {
  clip-path: circle(75% at 50% 50%);
  transition: clip-path 0.5s ease-in-out;

}
}

#Text-div a {
display: inline-block;
overflow: hidden;
white-space: nowrap;
}

#Text-div a span {
display: inline-block;
opacity: 0;
transition: opacity 0.5s ease-in-out;
}

#Text-div a.animate span {
opacity: 1;
transition-delay: calc(var(--char-index) * 0.1s);
}

#Text-div h2 {
cursor: pointer;
transition: all ease 0.3s;
opacity: 1;
}

#Category-section {
background-color: black;
}

#Press-div {
/*  background: url(/Devinja-ReimagineRound1/media/download.svg);*/
background-color: black;

}

@media (max-width:607px) {
#Main-div {
  display: flex;
  flex-direction: column;
  justify-content: baseline;
  align-items: center;
  gap: 2rem;
  height: auto;
}

#Heading-div {
  height: 10vh;
}

#Image-div {
  width: 100vw;
  height: 30%;
}

#Text-div {
  flex-direction: column;
  justify-content: center;

}

#Text-div h2 {
  text-align: center;
  margin-left: 0;
  width: 100vw;
  font-size: 9vmin;
  user-select: none;

}

#Press-div {
  padding-bottom: 4rem;
}

}

@media (min-width:607px) and (max-width:990px) {
#Main-div {

  height: auto;
}

#Image-div {
  display: flex;
  justify-content: center;
  align-items: center;

}

#Text-div h2 {
  text-align: center;
  margin-left: 0;

  font-size: 4vmin;
  user-select: none;

}

#Heading h1 {
  font-size: 3vmin;
  width: 100%;
  height: 100%;
}

}

@media (min-width:767px) and (max-width:1706px) {
#Category-section {
  height: auto;
}

.card {
  /* padding-top: 2rem; */
  margin-top: 3rem;
  margin-right: 2rem;
  margin-left: 2rem;
}
}

@media (min-width:1718px) and (max-width:2568px) {
.card {
  /* padding-top: 2rem; */
  /* margin-top: 3rem; */
  margin-right: 1rem;
  margin-left: 1rem;
}
}

/* bestsellers css*/
::selection {
  background-color: rgba(255, 70, 70, 0.848);
  color: black;
}

.products{
    min-height: 100vh;
}

.pointer {
  left: 0;
  top: 0;
  transform: translate(-50%, -50%);
}

.item {
  display: inline-block;
  margin-right: 4vmin;
}

.card{
  transform-style: preserve-3d
}

.cart-btn {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    opacity: 1;
  }
  
.dets-btn {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    opacity: 1;
  }
  
  .item{
    color: black;
  }

  .cursor{
    height: 60px;
    width: 60px;
    background-color: rgba(255, 255, 0, 0);
    border: 1px solid white;
    border-radius: 50%;
    position: fixed;
    z-index: 100;
}

  
  /* top picks & bestseller RESPONSIVE */


  @media (min-width:333px) and (max-width:734px) {
    

    .custom-h1 {
      font-size: 4vmin; 
      border-radius: 50%; 
      font-weight: bold; 
      position: absolute; 
      top: 1.5vmin; 
      right: 22vmin; 
      height: auto;
      width: auto;
      padding: 1vmin; 
      padding-top: 0%;
      padding-bottom: 0%;
      text-align: center; 
      color: white; 
      background-color: #dc2626; 
      line-height: 3vmin; 
      }
      

  }
  @media (min-width:461px) and (max-width:767px){
    .itm-dets h4 span{
      font-size: 2.3vmin;
    }
  }
  @media (max-width:991px){
      .item-cont{
          flex-wrap: wrap;
      }
  }
  
  
  @media (min-width:525px) and (max-width:1023px) {
    .container
    .card{
      height: 40vh;
      width: 35vh;
    }

    .itm-cont
    .item{
      height: 45vh;
      width: 35vh;
    }
  }
@media (max-width: 768px) {
  .products {
    display: flex;
    flex-direction: column;
  }
}

@media (max-width:1022px){
    .products{
        display: flex;
        flex-direction: column;
    }
    .products .item-cont{
      display: flex;
      flex-wrap: wrap;
      align-items: center;
      justify-content: space-evenly;
      /* gap: 7vw; */
      /* padding: 3vw; */
    }
    .dets-btn {
      opacity: 1;
  } 
    .cart-btn{
      top: 5%;
      left: 15%;
      opacity: 1;
    }
}
@media (min-width:1023px){
  .products .item-cont {
    white-space: nowrap;
    overflow-x: auto;
  }
  
  .products .item {
    color: black;
  }
  
  .item-cont::-webkit-scrollbar {
    display: none;
  }

  .item-cont .item{
    height: 60vmin;
    width: 40vmin;
  }

  .item-cont .item img{
    height: 50vmin;
    width: 100%;
  }
  .dets-btn {
    opacity: 1;
} 
  .cart-btn{
    opacity: 1;
  }


}

